metadata/objects/App_Log__c.object
<CustomObject>
    <description>Object used to store any kind of application logs.</description>
    <fields>
        <fullName>Action__c</fullName>
        <inlineHelpText>Action within the module that produced this log.</inlineHelpText>
        <label>Action</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Task_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The app log, during whose processing this log entry was created</inlineHelpText>
        <label>App Task</label>
        <referenceTo>App_Task__c</referenceTo>
        <relationshipLabel>App Logs</relationshipLabel>
        <relationshipName>App_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Details1__c</fullName>
        <inlineHelpText>Details stores any log or additional details associated with the tx log. There are 5 details fields, Details1 till Details5.</inlineHelpText>
        <label>Details1</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details2__c</fullName>
        <label>Details2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details3__c</fullName>
        <label>Details3</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <inlineHelpText>The module which generated this tx log</inlineHelpText>
        <label>Module</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record__c</fullName>
        <formula>If(Not(IsBlank(Record_Id__c)), HYPERLINK(&apos;/&apos; + Record_Id__c, Record_Id__c), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sobject__c</fullName>
        <inlineHelpText>If this tx log was generated as part of processing a record of a particular object, this field would indicate that object.</inlineHelpText>
        <label>Sobject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Debug</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value1__c</fullName>
        <inlineHelpText>Value fields can be used to store any additional information relevant to transaction, which this log is associated with.</inlineHelpText>
        <label>Value1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value2__c</fullName>
        <label>Value2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value3__c</fullName>
        <label>Value3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>App Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Module__c</columns>
        <columns>Action__c</columns>
        <columns>Type__c</columns>
        <columns>Message__c</columns>
        <columns>App_Task_Id__c</columns>
        <columns>External_Id__c</columns>
        <columns>Record__c</columns>
        <columns>Value1__c</columns>
        <columns>Value2__c</columns>
        <columns>Value3__c</columns>
        <columns>Value4__c</columns>
        <columns>Value5__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Created_Today</fullName>
        <columns>NAME</columns>
        <columns>Module__c</columns>
        <columns>Action__c</columns>
        <columns>Type__c</columns>
        <columns>Message__c</columns>
        <columns>App_Task_Id__c</columns>
        <columns>External_Id__c</columns>
        <columns>Record__c</columns>
        <columns>Value1__c</columns>
        <columns>Value2__c</columns>
        <columns>Value3__c</columns>
        <columns>Value4__c</columns>
        <columns>Value5__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Created Today</label>
    </listViews>
    <listViews>
        <fullName>All_Errors</fullName>
        <columns>NAME</columns>
        <columns>Module__c</columns>
        <columns>Action__c</columns>
        <columns>Type__c</columns>
        <columns>Message__c</columns>
        <columns>App_Task_Id__c</columns>
        <columns>External_Id__c</columns>
        <columns>Record__c</columns>
        <columns>Value1__c</columns>
        <columns>Value2__c</columns>
        <columns>Value3__c</columns>
        <columns>Value4__c</columns>
        <columns>Value5__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </filters>
        <label>All Errors</label>
    </listViews>
    <listViews>
        <fullName>All_Errors_Created_Today</fullName>
        <columns>NAME</columns>
        <columns>Module__c</columns>
        <columns>Action__c</columns>
        <columns>Type__c</columns>
        <columns>Message__c</columns>
        <columns>App_Task_Id__c</columns>
        <columns>External_Id__c</columns>
        <columns>Record__c</columns>
        <columns>Value1__c</columns>
        <columns>Value2__c</columns>
        <columns>Value3__c</columns>
        <columns>Value4__c</columns>
        <columns>Value5__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All Errors Created Today</label>
    </listViews>
    <nameField>
        <displayFormat>APL-{0000000000}</displayFormat>
        <label>App Log#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>App Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>